--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/Labels.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/Labels.resx
@@ -117,8 +117,41 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Assignor" xml:space="preserve">
+    <value>Възложител</value>
+  </data>
+  <data name="BeginsOn" xml:space="preserve">
+    <value>Начален час</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>Изчисти</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Дата</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Описание</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Е-майл</value>
+  </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>До</value>
+  </data>
+  <data name="EndsOn" xml:space="preserve">
+    <value>Краен час</value>
+  </data>
+  <data name="IsEquipmentRequired" xml:space="preserve">
+    <value>Нужна ли е мултимедийна / озвучителна техника?</value>
+  </data>
   <data name="MultipleReservations" xml:space="preserve">
     <value>резервации</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Име</value>
+  </data>
+  <data name="Never" xml:space="preserve">
+    <value>Никога</value>
   </data>
   <data name="NewReservation" xml:space="preserve">
     <value>Нова резервация</value>
@@ -126,7 +159,31 @@
   <data name="NoReservations" xml:space="preserve">
     <value>Няма направени резервации.</value>
   </data>
+  <data name="PhoneNumber" xml:space="preserve">
+    <value>Телефон</value>
+  </data>
+  <data name="PointOfContact" xml:space="preserve">
+    <value>Лице за контакт</value>
+  </data>
+  <data name="RepetitionPolicy" xml:space="preserve">
+    <value>Повтаряемост</value>
+  </data>
+  <data name="RepetitionsCounts" xml:space="preserve">
+    <value>След брой повторения</value>
+  </data>
+  <data name="RepetitionWindow" xml:space="preserve">
+    <value>През колко седмици</value>
+  </data>
+  <data name="ReservationDetails" xml:space="preserve">
+    <value>Детайли за резервацията</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Запази</value>
+  </data>
   <data name="SingleReservation" xml:space="preserve">
     <value>резервация</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Наименование на събитието</value>
   </data>
 </root>
