Added validation (error messages + unit tests) to make sure the start date is before end date

--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/ErrorMessages.en.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/ErrorMessages.en.resx
@@ -123,4 +123,7 @@
   <data name="DateExpired" xml:space="preserve">
     <value>The date can not be in the past.</value>
   </data>
+  <data name="EndDateIsBeforeStartDate" xml:space="preserve">
+    <value>End date should be after start date.</value>
+  </data>
 </root>
