--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/ErrorMessages.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/ErrorMessages.resx
@@ -126,4 +126,7 @@
   <data name="EndDateIsBeforeStartDate" xml:space="preserve">
     <value>Крайната дата трябва да е след началната.</value>
   </data>
+  <data name="PositiveNumberIsRequired" xml:space="preserve">
+    <value>Позволени са само положителни числа.</value>
+  </data>
 </root>
