--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/Labels.en.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/Labels.en.resx
@@ -150,8 +150,8 @@
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
-  <data name="Never" xml:space="preserve">
-    <value>Never</value>
+  <data name="Forever" xml:space="preserve">
+    <value>Forever</value>
   </data>
   <data name="NewReservation" xml:space="preserve">
     <value>New reservation</value>
@@ -185,5 +185,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Event title</value>
+  </data>
+  <data name="OneTimeOnly" xml:space="preserve">
+    <value>One-time-only</value>
   </data>
 </root>
