--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/Labels.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/Labels.resx
@@ -150,8 +150,8 @@
   <data name="Name" xml:space="preserve">
     <value>Име</value>
   </data>
-  <data name="Never" xml:space="preserve">
-    <value>Никога</value>
+  <data name="Forever" xml:space="preserve">
+    <value>Завинаги</value>
   </data>
   <data name="NewReservation" xml:space="preserve">
     <value>Нова резервация</value>
@@ -185,5 +185,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Наименование на събитието</value>
+  </data>
+  <data name="OneTimeOnly" xml:space="preserve">
+    <value>Еднократно</value>
   </data>
 </root>
