--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/ErrorMessages.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Reservations/ErrorMessages.resx
@@ -126,6 +126,9 @@
   <data name="EndDateIsBeforeStartDate" xml:space="preserve">
     <value>Крайната дата трябва да е след началната.</value>
   </data>
+  <data name="NoSelectedRepetitionDays" xml:space="preserve">
+    <value>Не са избрани дни за повторение на събитието.</value>
+  </data>
   <data name="PositiveNumberIsRequired" xml:space="preserve">
     <value>Позволени са само положителни числа.</value>
   </data>
