--- a/Web/NbuReservationSystem.Web.Models/LocalizationResources/ValidationMessages.en.resx
+++ b/Web/NbuReservationSystem.Web.Models/LocalizationResources/ValidationMessages.en.resx
@@ -123,6 +123,12 @@
   <data name="InvalidePhoneNumber" xml:space="preserve">
     <value>Invalid phone number - must be +359XXXXXXXXX or 10 digit number, starting with 0.</value>
   </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value>Тhe password must between {2} and {1} symbols.</value>
+  </data>
+  <data name="PasswordMissmatch" xml:space="preserve">
+    <value>The two password don't match.</value>
+  </data>
   <data name="PositiveNumberIsRequired" xml:space="preserve">
     <value>Only positive integers are allowed.</value>
   </data>
