--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Buttons.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Buttons.resx
@@ -117,19 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="InvalidEmail" xml:space="preserve">
-    <value>Въведеният е-майл е невалиден.</value>
+  <data name="Clear" xml:space="preserve">
+    <value>Изчисти</value>
   </data>
-  <data name="InvalidePhoneNumber" xml:space="preserve">
-    <value>Невалиден номер - трябва да бъде +359XXXXXXXXX или 10 цифрено число, започващо с 0.</value>
-  </data>
-  <data name="PositiveNumberIsRequired" xml:space="preserve">
-    <value>Позволени са само положителни числа.</value>
-  </data>
-  <data name="RequiredField" xml:space="preserve">
-    <value>Полето е задължително.</value>
-  </data>
-  <data name="TooLongInput" xml:space="preserve">
-    <value>Броят допустим символи е не повече от {1}.</value>
+  <data name="Submit" xml:space="preserve">
+    <value>Изпрати</value>
   </data>
 </root>
