--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AccountLabels.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AccountLabels.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ChangePassword" xml:space="preserve">
+    <value>Смяна на паролата</value>
+  </data>
   <data name="ConfirmPassword" xml:space="preserve">
     <value>Повтори парола</value>
   </data>
@@ -129,8 +132,14 @@
   <data name="ForgottenPasswordMailSent" xml:space="preserve">
     <value>На пощата Ви бе изпратен линк за смяна на паролата.</value>
   </data>
+  <data name="InvalidLoginInfo" xml:space="preserve">
+    <value>Невалидна комбинация от име и парола.</value>
+  </data>
   <data name="NewPassword" xml:space="preserve">
     <value>Нова парола</value>
+  </data>
+  <data name="NextStep" xml:space="preserve">
+    <value>Следваща стъпка..</value>
   </data>
   <data name="Password" xml:space="preserve">
     <value>Парола</value>
