--- a/Web/NbuReservationSystem.Web.Models/LocalizationResources/ValidationMessages.en.resx
+++ b/Web/NbuReservationSystem.Web.Models/LocalizationResources/ValidationMessages.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InvalidColor" xml:space="preserve">
+    <value>Invalid color.</value>
+  </data>
   <data name="InvalidEmail" xml:space="preserve">
     <value>Invalid e-mail.</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="RequiredField" xml:space="preserve">
     <value>This field is required.</value>
+  </data>
+  <data name="StringLength" xml:space="preserve">
+    <value>The field has to be between {2} and {1} symbols.</value>
   </data>
   <data name="TooLongInput" xml:space="preserve">
     <value>The input should not be longer than {1} characters.</value>
