Prtially integrated halls: - they are now part of the new reservation form - backend verifies that the hall is free - hall name and color are required db fields - removed old index, built on top of reservation date, start hour and end hour - added hall to organizer entity - migrations cleanup - added bootstrap-select lib

--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/ReservationLabels.en.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/ReservationLabels.en.resx
@@ -195,4 +195,7 @@
   <data name="RequestFailed" xml:space="preserve">
     <value>An error occurred while the request was processed. Please make sure the hall is free.</value>
   </data>
+  <data name="Hall" xml:space="preserve">
+    <value>Hall</value>
+  </data>
 </root>
