Integrated halls with reservations.

--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/ReservationLabels.en.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/ReservationLabels.en.resx
@@ -198,4 +198,7 @@
   <data name="Hall" xml:space="preserve">
     <value>Hall</value>
   </data>
+  <data name="SelectHall" xml:space="preserve">
+    <value>Please select a hall...</value>
+  </data>
 </root>
