Added a warning message in case the user tries to browse reservations when no halls are added

--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/ReservationLabels.en.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/ReservationLabels.en.resx
@@ -201,4 +201,7 @@
   <data name="SelectHall" xml:space="preserve">
     <value>Please select a hall...</value>
   </data>
+  <data name="NoHalls" xml:space="preserve">
+    <value>No halls are added. Please contact the administrator.</value>
+  </data>
 </root>
