--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AdministrationLabels.en.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AdministrationLabels.en.resx
@@ -135,6 +135,12 @@
   <data name="Hall" xml:space="preserve">
     <value>Hall</value>
   </data>
+  <data name="IsReservationDeleted" xml:space="preserve">
+    <value>Deleted?</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>No</value>
+  </data>
   <data name="Organizer" xml:space="preserve">
     <value>Organizer</value>
   </data>
@@ -149,5 +155,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Title</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Yes</value>
   </data>
 </root>
