--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AdministrationLabels.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AdministrationLabels.resx
@@ -135,6 +135,12 @@
   <data name="Hall" xml:space="preserve">
     <value>Зала</value>
   </data>
+  <data name="IsReservationDeleted" xml:space="preserve">
+    <value>Изтрита?</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>Не</value>
+  </data>
   <data name="Organizer" xml:space="preserve">
     <value>Организатор</value>
   </data>
@@ -149,5 +155,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Заглавие</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Да</value>
   </data>
 </root>
