--- a/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AdministrationLabels.resx
+++ b/Web/NbuReservationSystem.Web/App_GlobalResources/Labels/AdministrationLabels.resx
@@ -147,6 +147,9 @@
   <data name="PhoneNumber" xml:space="preserve">
     <value>Телефон</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Моля, изчакайте...</value>
+  </data>
   <data name="ReservationsAdministration" xml:space="preserve">
     <value>Администриране на резервации</value>
   </data>
